KVH/mykvh/Email-to-anything/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Message_Id__c</fullName>
        <description>Ortoo Email-to-anything: Message-ID header of email that lead was created from.</description>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_In__c</fullName>
        <label>Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>BCC</fullName>
                </value>
                <value>
                    <fullName>0in</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>0px</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>?</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Body?</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Body??</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CCaBCC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sub</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Subject__c</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;Ref&quot; &amp; 
SUBSTITUTE( 
IF(MID($Organization.Id, 8, 1) = &quot;0&quot;, 
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp; 
&quot;.&quot; &amp; 
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;), 
&quot;{&quot; &amp; LEFT($Organization.Id, 7) &amp; &quot;.&quot; &amp; RIGHT($Organization.Id, 8) &amp; &quot;}&quot; 
) 
&amp; 
IF(MID(Id, 8, 1) = &quot;0&quot;, 
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT(Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp; 
&quot;.&quot; &amp; 
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT(Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;), 
&quot;{&quot; &amp; LEFT(Id, 7) &amp; &quot;.&quot; &amp; RIGHT(Id, 8) &amp; &quot;}&quot; 
), 
&quot;}{&quot;, &quot;:&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
</CustomObject>